tests/parser/errors/dotted_types.rv
var clr: tools.image.1.Color
